HW07 completed